@@ -29,6 +29,7 @@
  *   - ~ Filtering options broken when no log existed (-r) (2.3.11)
  *   - ~ Sparseness ({sparse}) was not calculated properly (2.3.12)
  *   - ~ Certain stages of SFV rebuild ignoring --nowrite (2.3.12)
+ *   - + SUID/SGID/sticky bit octet support (2.3.13)
  *
  * v2.2:
  *
